--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx,css,html}",
-    "prepare": "husky install" // Ensure this line is present
+    "prepare": "husky install"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
