--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx,css,html}",
-    "prepare": "husky install"
+    "prepare": "husky install" 
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,7 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",  // Use caret to allow minor updates
     "web-vitals": "^2.1.4",
     "prop-types": "^15.8.1"
   },
