--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1",  // Use caret to allow minor updates
+    "react-scripts": "^5.0.1",  
     "web-vitals": "^2.1.4",
     "prop-types": "^15.8.1"
   },
